feat: add Material content access (#112) (#136)
